2.0.0-alpha3 (2013-??-??)
	* Added: getQueryParameters to RequestInterface.
	* Added: Util::negotiate.

2.0.0-alpha2 (2013-07-02)
	* Added: Digest & AWS Authentication.
	* Added: Message::getHttpVersion and Message::setHttpVersion.
	* Added: Request::setRawServerArray, getRawServerValue.
	* Added: Request::createFromPHPRequest
	* Added: Response::send
	* Added: Request::getQueryParameters
	* Added: Utility for dealing with HTTP dates.
	* Added: Request::setPostData and Request::getPostData.
	* Added: Request::setAbsoluteUrl and Request::getAbsoluteUrl.
	* Added: URLUtil, methods for calculation relative and base urls.
	* Removed: Response::sendBody

2.0.0-alpha1 (2012-10-07)
	* Fixed: Lots of small naming improvements
	* Added: Introduction of Message, MessageInterface, Response,
	  ResponseInterface.

Before 2.0.0, this package was built-into SabreDAV, where it first appeared in
January 2009.